# hackerpet

./: .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  on_create_script.sh
.github/workflows/: ci-testing.yaml  publish-to-test-pypi.yaml  publish.yaml
hackerpet/: __init__.py  __main__.py  data_types.py  exceptions.py  hackerpet.py
src/hackerpet/: __init__.py  __main__.py
tests/: status_test.py
