[build-system]
requires = ["setuptools >= 45", "setuptools_scm[toml] >= 6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "hackerpet"
dependencies = [
    "aiohttp[speedups]"
]
readme = "README.md"
requires-python = ">=3.7"
keywords = ["cleverpet", "hackerpet"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]

[project.scripts]
cli-name = "hackerpet:main"

[tool.setuptools_scm]